# mdp2mailservice

./: .dockerignore  .env.dev  .env.example  .env.test  .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  Readme.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
client/: .env.example  Readme.md  cli.py
mdp2mailservice/: init_db.py  main.py  routes.py
mdp2mailservice/admin/: admin_panel.py  formatters.py
mdp2mailservice/common/: constants.py
mdp2mailservice/common/bases/: models.py  repository.py
mdp2mailservice/common/utils/: files.py  security.py  shared.py
mdp2mailservice/consumers/: mail.py  schemas.py
mdp2mailservice/core/: config.py  db.py  exceptions.py  loader.py  logging.py  middlewares.py  openapi.py
mdp2mailservice/external_services/: email.py
mdp2mailservice/health/: health_check.py
mdp2mailservice/mail/: __init__.py  admin.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
mdp2mailservice/template_engine/: constants.py  dependencies.py  engine.py  exceptions.py  router.py  schemas.py
mdp2mailservice/templates/: base.html  base.html.example  example.html  jinja-template.html.example  mjml-template.mjml.example
migrations/: env.py
migrations/versions/: 3746969651f8_initial.py  402ecfbf9485_initial.py
tests/: conftest.py  test_exceptions.py  test_migrate.py
tests/api/: test_health.py
tests/test_api/: test_health.py
